[gd_scene load_steps=15 format=3 uid="uid://bn1v73eb47jsk"]

[ext_resource type="PackedScene" uid="uid://b3dpxup87lm2e" path="res://enemy/enemy.tscn" id="1_d8b3q"]
[ext_resource type="Script" uid="uid://cl1ofd0qi7djm" path="res://enemy/plasma_cannon/enemy_plasma_cannon.gd" id="2_k46t8"]
[ext_resource type="Texture2D" uid="uid://cdqcj2itsy2xc" path="res://enemy/plasma_cannon/frame_full.png" id="2_tpy64"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofsxj"]
size = Vector2(500, 257)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nrxao"]
size = Vector2(74, 239.5)

[sub_resource type="Animation" id="Animation_ofsxj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ukea0"]
resource_name = "die"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [88, 89, 90, 91, 92, 93, 94, 95]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [80, 81, 82, 83, 84, 85, 86, 87]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_nrxao"]
resource_name = "hurt"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [64, 65, 66, 67, 68]
}

[sub_resource type="Animation" id="Animation_2mvqj"]
resource_name = "idle"
length = 0.7
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_pmsee"]
resource_name = "move"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_ppra6"]
resource_name = "pre_attack"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_p200p"]
resource_name = "attack"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ppra6"]
_data = {
&"RESET": SubResource("Animation_ofsxj"),
&"attack": SubResource("Animation_p200p"),
&"die": SubResource("Animation_ukea0"),
&"hurt": SubResource("Animation_nrxao"),
&"idle": SubResource("Animation_2mvqj"),
&"move": SubResource("Animation_pmsee"),
&"pre_attack": SubResource("Animation_ppra6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mvqj"]
size = Vector2(74, 231)

[node name="EnemyPlasmaCannon" instance=ExtResource("1_d8b3q")]
script = ExtResource("2_k46t8")
hp = 2

[node name="Direction" type="Node2D" parent="." index="0"]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="Direction" index="0"]
position = Vector2(0, -150)
texture = ExtResource("2_tpy64")
flip_h = true
hframes = 8
vframes = 12
frame = 8

[node name="Sprite2D2" type="Sprite2D" parent="Direction" index="1"]
unique_name_in_owner = true
position = Vector2(0, -150)
texture = ExtResource("2_tpy64")
flip_h = true
hframes = 8
vframes = 12

[node name="DetectiveBox" type="Area2D" parent="Direction" index="2"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/DetectiveBox" index="0"]
position = Vector2(236, -129)
shape = SubResource("RectangleShape2D_ofsxj")

[node name="HurtBox" type="Area2D" parent="Direction" index="3"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HurtBox" index="0"]
position = Vector2(0, -120.25)
shape = SubResource("RectangleShape2D_nrxao")
debug_color = Color(1.4439225e-06, 0.6516923, 0.0010509831, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ppra6")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
visible = false
position = Vector2(0, -115.5)
shape = SubResource("RectangleShape2D_2mvqj")

[node name="TimerIdle" type="Timer" parent="." index="3"]
unique_name_in_owner = true
one_shot = true

[node name="TimerMove" type="Timer" parent="." index="4"]
unique_name_in_owner = true
one_shot = true

[connection signal="body_entered" from="Direction/HurtBox" to="." method="_on_hurt_box_body_entered"]
